--- a/css/index.css
+++ b/css/index.css
@@ -848,3 +848,87 @@ body{
 }
 /*fixed定位图标*/
 
+.box_body{
+	width: 100%;
+	height: 100%;
+}
+.cover{
+	width: 460px;
+	height: 460px;
+	background: white;
+	position: absolute;
+	left:50%;
+	margin-left: -560px;
+	top: 110px;
+	z-index: 600;
+	border-radius: 20px;
+	overflow: hidden;
+	border: #999999 solid 1px;
+}
+.cover img{
+	width:460px;
+	height:460px;
+}
+
+#title {
+	width: 500px;
+	height: 70px;
+	background: white;
+	position: absolute;
+	left:50%;
+	margin-left: -50px;
+	top: 100px;
+	z-index: 600;
+	text-align: left;
+	padding-left: 10px;
+	font-size: 23px;
+	line-height: 70px;
+}
+
+.cont{
+	width: 500px;
+	height: 420px;
+
+	position: absolute;
+	left:50%;
+	margin-left: -50px;
+	top: 175px;
+	z-index: 600;
+	font-size: 18px;
+	padding-top: 5px;
+	padding-left: 10px;
+}
+.jg{
+	font: 19px/1.5 "Microsoft Yahei",tahoma,arial;
+	background: #e9e9e9;
+}
+.price{
+	font-size: 16px;
+	color: #666666;
+	text-align: center;
+}
+
+#tm-price{
+	color: red;
+	text-align: center;
+	font-size: 22px;
+}
+.yf{
+	font-size: 16px;
+	color: #666666;
+	margin-top: 11px;
+	float: left;
+}
+.cont button{
+	width: 240px;
+	height: 50px;
+	background: red;
+	border: 0;
+	margin-left: 10px;
+	color: white;
+	font-size: 20px;
+	margin-top: 160px;
+}
+.cont button:active{
+	background:  #CD0000;
+}
